Moved and split the PV-storage-savings notebook.

--- a/PV/Data-Extraction--PV-South-vs-West.ipynb
+++ b/PV/Data-Extraction--PV-South-vs-West.ipynb
@@ -4,13 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# PV: Solar production on south- vs. west-facing rooftop and how solar systems align with 4CP events in Texas\n",
+    "# Data Extraction Notebook for PV: Solar production on south- vs. west-facing rooftop and how solar systems align with 4CP events in Texas\n",
+    "\n",
+    "## This notebook will connect to the database and extract the data live and put it into compressed zip files in this directory. \n",
     "\n",
     "This notebook will explore solar generation around the ERCOT 4CP events and compare West vs South facing solar generation during those events.\n",
     "\n",
     "The ERCOT 4CP events are the 15-minute ERCOT grid peak events for each month in June, July, August and September.\n",
     "\n",
-    "ERCOT uses each large customer’s (including municipal utilities) total energy demand during the 4CP periods in the previous year as the basis for charges in the current year."
+    "ERCOT uses each large customer’s (including municipal utilities) total energy demand during the 4CP periods in the previous year as the basis for charges in the current year.\n",
+    "\n",
+    "<p>You'll need to modify the read_csv calls in that notebook to point at these instead of the ones we've extracted and prepared for you in the /shared/JupyterHub-Examples-Data/ directory on the JupyterHub server if you would like to use the ones exported by this notebook in the analysis notebook.</p>"
    ]
   },
   {
@@ -20,7 +24,6 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
     "import psycopg2\n",
     "import sqlalchemy as sqla\n",
     "import os\n",
@@ -113,7 +116,6 @@
    "outputs": [],
    "source": [
     "# export homes to csv file\n",
-    "# export the data to a csv file\n",
     "compression_opts = dict(method='zip',\n",
     "                        archive_name='pv_south_vs_west_homes.zip')\n",
     "df.to_csv('pv_south_vs_west_homes.zip', index=False,\n",
