--- a/PV/PV-South-vs-West.ipynb
+++ b/PV/PV-South-vs-West.ipynb
@@ -32,7 +32,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Read pre-processed data for June 2018 through August 2018\n",
+    "# Read pre-processed data for June 2018 through August 2018\n",
     "df2 = pd.read_csv('/shared/JupyterHub-Examples-Data/pv/pv_south_vs_west.zip',compression='zip')\n",
     "df2"
    ]
@@ -50,7 +50,7 @@
     "final_dataids = ndata['dataid']\n",
     "\n",
     "df3=df2.loc[df2['dataid'].isin(final_dataids)]\n",
-    "df3.count()\n"
+    "df3.count()"
    ]
   },
   {
