Moved HVAC-Solar-Generation-Alignment.ipynb into an HVAC folder and cut the number of dataids used.

--- a/HVAC/HVAC-Solar-Generation-Alignment.ipynb
+++ b/HVAC/HVAC-Solar-Generation-Alignment.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "## This notebook explores how solar generation aligns with in-home HVAC use and what percent of the HVAC energy load is powered by the home’s rooftop solar over each season for one year\n",
-    "Data from 50 homes has been pre-prepared and is read in from /shared/hvac/summer.csv.gz on the JupyterHub server."
+    "Data from 25 homes has been pre-prepared and is read in from `/shared/JupyterHub-Examples-Data/hvac` on the JupyterHub server."
    ]
   },
   {
@@ -17,10 +17,7 @@
     "#import packages\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import psycopg2\n",
-    "import sqlalchemy as sqla\n",
     "import os\n",
-    "from config.read_config import get_database_config\n",
     "import numpy as np\n",
     "import sys\n",
     "%matplotlib inline\n",
@@ -34,7 +31,8 @@
    "outputs": [],
    "source": [
     "#Read pre-processed data for June 2018 through August 2018\n",
-    "summer_df = pd.read_csv('/shared/hvac/summer.csv.gz',compression='gzip')"
+    "summer_df = pd.read_csv('/shared/JupyterHub-Examples-Data/hvac/hvac_alignment_summer.zip',compression='zip')\n",
+    "summer_df"
    ]
   },
   {
@@ -113,7 +111,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From above results we can see that 18% of HVAC energy load in summer is powered by the home’s rooftop solar."
+    "From above results we can see that 16% of HVAC energy load in summer is powered by the home’s rooftop solar."
    ]
   },
   {
@@ -123,7 +121,7 @@
    "outputs": [],
    "source": [
     "#Read pre-processed data for Sep 2018 through Nov 2018\n",
-    "fall_df = pd.read_csv('/shared/hvac/fall.csv.gz',compression='gzip')"
+    "fall_df = pd.read_csv('/shared/JupyterHub-Examples-Data/hvac/hvac_alignment_fall.zip',compression='zip')"
    ]
   },
   {
@@ -193,7 +191,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "14% of HVAC energy load in Fall is powered by the home’s rooftop solar."
+    "13% of HVAC energy load in Fall is powered by the home’s rooftop solar."
    ]
   },
   {
@@ -203,7 +201,7 @@
    "outputs": [],
    "source": [
     "#Read pre-processed data for march 2018 through may 2018\n",
-    "spring_df = pd.read_csv('/shared/hvac/spring.csv.gz',compression='gzip')"
+    "spring_df = pd.read_csv('/shared/JupyterHub-Examples-Data/hvac/hvac_alignment_spring.zip',compression='zip')"
    ]
   },
   {
@@ -271,7 +269,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "21% of HVAC energy load in spring is powered by the home’s rooftop solar. \n",
+    "25% of HVAC energy load in spring is powered by the home’s rooftop solar. \n",
     "This is also the highest among all four seasons."
    ]
   },
@@ -282,7 +280,7 @@
    "outputs": [],
    "source": [
     "#Read pre-processed data for dec 2018 through feb 2019\n",
-    "winter_df = pd.read_csv('/shared/hvac/winter.csv.gz',compression='gzip')"
+    "winter_df = pd.read_csv('/shared/JupyterHub-Examples-Data/hvac/hvac_alignment_winter.zip',compression='zip')"
    ]
   },
   {
@@ -360,6 +358,13 @@
     "Also, Spring is the season when HVAC load is most powered by home’s PV system. \n",
     "This makes sense because during spring we get enough sunlight but HVAC system are not used as much."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
