Reorganizing the data files a little bit.

--- a/Efficiency/Efficiency-Coincidence-Water-Gas-Elec.ipynb
+++ b/Efficiency/Efficiency-Coincidence-Water-Gas-Elec.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "To prepare this graph; gas data(water_and_gas.gas_ert table), water data(water_and_gas.water_ert table) and energy data(electricity.eg_realpower_15min view) for year 2014, 2015 and 2016 have been converted into hourly data for 30 homes.\n",
     "\n",
-    "All three datasets have been joined to find all hours showing coincidence of use in homes. This data has been exported to 'water_gas_energy.csv' file which is mounted in your home directory at ~/shared/ directory."
+    "All three datasets have been joined to find all hours showing coincidence of use in homes. This data has been exported to 'water_gas_energy.csv' file which can be found at `/shared/JupyterHub-Examples-Data/efficiency/water_gas_energy.csv` ."
    ]
   },
   {
@@ -37,7 +37,7 @@
    "outputs": [],
    "source": [
     "#Read pre-processed data \n",
-    "df1 = pd.read_csv('/shared/water_gas_energy.csv')\n",
+    "df1 = pd.read_csv('/shared/JupyterHub-Examples-Data/efficiency/water_gas_energy.csv')\n",
     "homes_list = df1.dataid.unique() \n",
     "homes_list"
    ]
