Pointed it at new 25 home dataset and added a tiny bit to it.

--- a/Efficiency/Efficiency-Percent-PV-Home-Usage.ipynb
+++ b/Efficiency/Efficiency-Percent-PV-Home-Usage.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Efficiency: What percent of a home’s average daily energy use is provided by its on-site solar PV-generated power\n",
     "\n",
-    "To prepare the data we selected 50 Texas homes with PV. We used 1 minute energy(from electricity.eg_realpower_1min) data for the selected homes for March 2018 through August 2018."
+    "To prepare the data we selected 25 Texas homes with PV. We used 1 minute energy(from electricity.eg_realpower_1min) data for the selected homes for March 2018 through August 2018."
    ]
   },
   {
@@ -21,11 +21,11 @@
     "import psycopg2\n",
     "import sqlalchemy as sqla\n",
     "import os\n",
+    "import sys\n",
     "sys.path.insert(0,'..')\n",
     "from config.read_config import get_database_config\n",
     "from datetime import datetime as dt\n",
     "import numpy as np\n",
-    "import sys\n",
     "%matplotlib inline\n",
     "sys.executable  # shows you your path to the python you're using"
    ]
@@ -37,7 +37,7 @@
    "outputs": [],
    "source": [
     "#Read pre-processed data \n",
-    "data_df = pd.read_csv('/shared/whole-use-by-solar.gz', compression='gzip')\n",
+    "data_df = pd.read_csv('/shared/JupyterHub-Examples-Data/efficiency/whole-use-by-solar.zip', compression='zip')\n",
     "homes_list = data_df.dataid.unique() \n",
     "homes_list"
    ]
@@ -151,10 +151,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "avg_solar_use_by_week['use_from_solar'].mean()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## From above analysis we see that 29% of home’s average daily energy use is provided by its on-site solar PV-generated power."
+    "## From above analysis we see that ~29% of home’s average daily energy use is provided by its on-site solar PV-generated power."
    ]
   }
  ],
